refactor(SE-62): adjusted logic to get `hasAdjustment` in `findLowestDailyRoomRates`